<resources>
    <string name="app_name">Copilot Relay</string>
    <string name="start_service">Start</string>
    <string name="hint_copilot_token">GitHub Copilot Token</string>
    <string name="hint_server_port">Port</string>
    <string name="sw_server_status">Start server</string>
    <string name="click_to_start_server">Click to start service</string>
    <string name="update_config">Update configuration</string>
    <string name="test_config">Test configuration</string>
    <string name="default_server_port">8080</string>
    <string name="server_is_running_status">✅ Running at http://localhost:%1$s\n▶️ %2$s requests processed</string>
    <string name="server_is_not_running">Server is not running, click to start</string>
    <string name="foreground_notification_title">Copilot Relay Service</string>
</resources>
