<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/copilot" />

    <Space
        android:layout_width="0dp"
        android:layout_height="16dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/sw_server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <Space
        android:layout_width="0dp"
        android:layout_height="6dp" />

    <TextView
        android:id="@+id/tv_server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_start_server"
        android:textSize="14sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_copilot_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_copilot_token">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_copilot_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_server_port">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/default_server_port" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_config" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="6dp" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_config" />

</LinearLayout>
